# trading_bot

./: .env.example  .gitignore  README.md  cli.py  implementation_plan (1).md  pyproject.toml
bot/: client.py  logging_config.py  orders.py  validators.py
