[project]
name = "trading-bot"
version = "1.0.0"
description = "Binance Futures Testnet Trading Bot — Primetrade.ai Assignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
trade = "cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
